New module added: logical deployments, linked to technology service
