# src/routes/index.js
@@ -21,6 +21,7 @@ const businessFunctionRoutes = require('../modules/business-functions/businessFu
 const businessProcessRoutes = require('../modules/business-processes/businessProcess.routes');
 const businessServiceRoutes = require('../modules/business-services/businessService.routes');
 const technologyServiceRoutes = require('../modules/technology-services/technologyService.routes');
+const logicalTechnologyComponentRoutes = require('../modules/logical-technology-components/logicalTechnologyComponent.routes');
 
 router.get('/', (_req, res) => res.json({ message: 'Welcome to Nexus Insight API' }));
 
@@ -44,5 +45,6 @@ router.use('/api/business-functions', businessFunctionRoutes);
 router.use('/api/business-processes', businessProcessRoutes);
 router.use('/api/business-services', businessServiceRoutes);
 router.use('/api/technology-services', technologyServiceRoutes);
+router.use('/api/logical-technology-components', logicalTechnologyComponentRoutes);
 
 module.exports = router;
